--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1> Para itzel Tal vez no sean reales, pero no te quedas sin tus flores amarillas</h1>
-        <h1>Me debes unas fotos y noche de pasión<3</h1>
+        <h1> Para La Andy  xd Tal vez no sean reales, pero no te quedas sin tus flores amarillas</h1>
+        <h1>De acompas y para que no no te quedes sin flores amarillas que no es mucho pero es algo</h1>
         <div class="flower-container">
             <!-- Las flores se agregarán y eliminarán aquí mediante JavaScript -->
         </div>
